[package]
name = "toy_marketplace"
version = "0.1.0"
edition = "2021"
author = "zdcthomas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
csv = "1.1.6"
rust_decimal = { version = "1.26.1" , features = ["serde-with-arbitrary-precision", "maths"]}
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.144", features = ["derive"] }
